[gd_scene load_steps=5 format=3 uid="uid://d3nu5iw2bhmid"]

[ext_resource type="Script" path="res://applications_Main/vm.gd" id="1_uba5o"]
[ext_resource type="PackedScene" uid="uid://scbyr8okghml" path="res://window.tscn" id="2_fd2gw"]
[ext_resource type="Theme" uid="uid://bi54ign8ggomc" path="res://samples/addons/Themes/Classic95/Classic95.tres" id="3_7lt14"]
[ext_resource type="Texture2D" uid="uid://dv04ie4ajj5he" path="res://assets/hosts/defaults/vm-back-default.png" id="4_8mihr"]

[node name="VM" type="Node2D"]
script = ExtResource("1_uba5o")

[node name="Window" parent="." instance=ExtResource("2_fd2gw")]

[node name="Control" type="Control" parent="Window"]
layout_mode = 3
anchors_preset = 0
offset_left = 222.0
offset_top = 36.0
offset_right = 1182.0
offset_bottom = 576.0
theme = ExtResource("3_7lt14")

[node name="Control" type="Control" parent="Window/Control"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0

[node name="ColorRect" type="ColorRect" parent="Window/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.709804, 0.647059, 0.619608, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Window/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Window/Control/VBoxContainer"]
layout_mode = 2

[node name="Hostname_enter" type="LineEdit" parent="Window/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(396.055, 0)
layout_mode = 2
placeholder_text = "enter hostname here"
clear_button_enabled = true

[node name="Back_button" type="Button" parent="Window/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(109.54, 0)
layout_mode = 2
text = "Back"

[node name="Forward_button" type="Button" parent="Window/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(109.54, 0)
layout_mode = 2
text = "Forward"

[node name="History" type="OptionButton" parent="Window/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(330.935, 0)
layout_mode = 2
text_overrun_behavior = 1
clip_text = true

[node name="Sprite2D" type="Sprite2D" parent="Window/Control/VBoxContainer"]
texture_filter = 1
position = Vector2(480, 286.25)
scale = Vector2(3.52941, 3.31699)
texture = ExtResource("4_8mihr")

[connection signal="closed" from="Window" to="." method="_on_window_closed"]
[connection signal="top" from="Window" to="." method="_on_window_top"]
[connection signal="text_submitted" from="Window/Control/VBoxContainer/HBoxContainer/Hostname_enter" to="." method="_on_hostname_enter_text_submitted"]
